@@ -1,5 +1,9 @@
 2009-08-07  Miguel de Dios <miguel.dedios@artica.es>
 
+	* include/functions_html.php: add options at html widgets for disable.
+
+2009-08-07  Miguel de Dios <miguel.dedios@artica.es>
+
 	* index.php: Fix error with writting buffer after ob_start and before
 	Pandora console don't change the http header.
 	Fixes: 2833710 
